--- a/k8s/app/flask-sample-app-deployment.yaml
+++ b/k8s/app/flask-sample-app-deployment.yaml
@@ -17,4 +17,12 @@ spec:
         - name: flask-sample-app
           image: docker.io/harshasridhar/flask-sample-app:v1.0.0
           imagePullPolicy: IfNotPresent
+          resources:
+            # keep request = limit to keep this container in guaranteed class
+            limits:
+              cpu: 100m
+              memory: 100Mi
+            requests:
+              cpu: 100m
+              memory: 100Mi
       restartPolicy: Always
